@@ -78,7 +78,7 @@ FunctionsToExport = 'Add-FontsToNavContainer', 'Add-GitToAlProjectFolder',
                'Copy-FileFromNavContainer', 'Copy-FileToNavContainer', 
                'Create-AadAppsForNav', 'Create-AadUsersInNavContainer', 
                'Create-AlProjectFolderFromNavContainer', 'Create-MyDeltaFolder', 
-               'Create-MyOriginalFolder', 'Download-File', 'Enter-NavContainer', 
+               'Create-MyOriginalFolder', 'Download-File', 'Download-Artifacts', 'Enter-NavContainer', 
                'Export-ModifiedObjectsAsDeltas', 
                'Export-NavContainerDatabasesAsBacpac', 
                'Export-NavContainerObjects', 'Extract-AppFileToFolder', 
