@@ -163,6 +163,7 @@ Check-NavContainerHelperPermissions -Silent
 . (Join-Path $PSScriptRoot "Misc\Remove-DesktopShortcut.ps1")
 . (Join-Path $PSScriptRoot "Misc\Write-NavContainerHelperWelcomeText.ps1")
 . (Join-Path $PSScriptRoot "Misc\Download-File.ps1")
+. (Join-Path $PSScriptRoot "Misc\Download-Artifacts.ps1")
 . (Join-Path $PSScriptRoot "Misc\Get-LocaleFromCountry.ps1")
 . (Join-Path $PSScriptRoot "Misc\Get-NavVersionFromVersionInfo.ps1")
 . (Join-Path $PSScriptRoot "Misc\Copy-FileFromNavContainer.ps1")
